--- a/Cargo.toml
+++ b/Cargo.toml
@@ -78,3 +78,7 @@ path = "src/demo/blinky.rs"
 [[bin]]
 name = "i2c"
 path = "src/exercitii/i2c.rs"
+
+[[bin]]
+name = "spi"
+path = "src/exercitii/spi.rs"
