--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,7 +35,7 @@ st7789 = "0.6.1"
 display-interface = "0.4.1"
 byte-slice-cast = { version = "1.2.0", default-features = false }
 smart-leds = "0.3.0"
-heapless = "0.8"
+heapless = { version = "0.8", features = ["serde"] }
 usbd-hid = "0.8.1"
 
 embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
@@ -50,6 +50,11 @@ pio-proc = "0.2"
 pio = "0.2.1"
 rand = { version = "0.8.5", default-features = false }
 embedded-sdmmc = "0.7.0"
+
+# for web request example
+reqwless = { version = "0.12.0", features = ["defmt",]}
+serde = { version = "1.0.203", default-features = false, features = ["derive"] }
+serde-json-core = "0.5.1"
 
 [profile.release]
 debug = 2
@@ -67,6 +72,10 @@ opt-level = "z"
 [[bin]]
 name = "blinky"
 path = "src/demo/blinky.rs"
+
+[[bin]]
+name = "web"
+path = "src/demo/web.rs"
 
 # [[bin]]
 # name = "my_bin"
